--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
 <!--     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/imagenes/logo192.png" /> -->
-    <link rel="icon" href="%PUBLIC_URL%/icon-travel.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/imagenes/icon-travel.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
