--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-<!--     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/imagenes/logo192.png" /> -->
+<!--    cambié el ícono a uno personalizado  <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/imagenes/logo192.png" /> -->
     <link rel="icon" href="%PUBLIC_URL%/assets/imagenes/icon-travel.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
