--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <!-- *recuerde ejecutar npm install react-scripts en consola para instalar todo lo necesario de manera local y la descarga no sea lenta :D
+        (en .gitignore se incluyó /node_modules para que la descarga de github no sea lenta.)  -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
